Handle FLAC files with an invalid sample rate

Avoid dividing by zero when encountering FLAC files with a (invalid,
according to the FLAC specification) sample rate of zero.

https://bugzilla.gnome.org/show_bug.cgi?id=757547